# THATTE

./: .gitignore  README.md  RoadMap0.txt  file_structure.txt  git.sh
thatte-extended/: Cargo.toml  LICENSE  Makefile  README.md  flake.nix  rust-toolchain.toml
thatte-extended/boot/thatte-boot-efi/: Cargo.toml
thatte-extended/boot/thatte-boot-efi/src/: lib.rs
thatte-extended/configs/: driveros.toml
thatte-extended/drv/hello-compositor-fb/: Cargo.toml
thatte-extended/drv/hello-compositor-fb/src/: main.rs
thatte-extended/mk/thatte-mk/: Cargo.toml
thatte-extended/mk/thatte-mk/src/: lib.rs
thatte-extended/scripts/: driveros-make.sh  driveros-run.sh  run-qemu.sh
thatte-extended/tools/vm-manager/: Cargo.toml
thatte-extended/tools/vm-manager/src/: main.rs
thatte-starter/: Cargo.toml  Makefile  README.md  flake.nix  rust-toolchain.toml
thatte-starter/boot/thatte-boot-efi/: Cargo.toml
thatte-starter/boot/thatte-boot-efi/src/: lib.rs  main.rs
thatte-starter/scripts/: build.sh  run-qemu.sh
