[workspace]
members = [
  "boot/thatte-boot-efi",
  "mk/thatte-mk",
  "tools/vm-manager",
  "drv/hello-compositor-fb"
]

# Build only the UEFI boot by default when not specifying -p
default-members = ["boot/thatte-boot-efi"]

[profile.dev]
panic = "abort"
lto = false
codegen-units = 256

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
strip = true
